--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD operation in js</title>
+    <title>Product management</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="index.js"></script>
@@ -15,7 +15,7 @@
     <!--Nav bar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="">Product Manager</a>
+            <a class="navbar-brand" href="index.html">Product Manager</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -34,8 +34,8 @@
     </nav>
 
     <div class="container">
-        <h2>Available Product</h2>
-        <div id="list">
+        <h2 class="my-4">Available Product</h2>
+        <div id="list" class="d-flex flex-wrap gap-5">
             
             
 
