--- a/updateproduct.html
+++ b/updateproduct.html
@@ -4,46 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Product</title>
+    <title>Update product</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <script src="Addproduct.js"></script>
+    <script src="update.js"></script>
     <link rel="stylesheet" href="styles.css">
-  </head>
-  
-  <body>
-    <!--Nav bar-->
+</head>
+
+<body>
+
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Product Manager</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="addProduct.html">Add</a>
-              </li>
-            </ul>
-          </div>
+            <a class="navbar-brand" href="index.html">Product Manager</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="addProduct.html">Add</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
-      
-    <!-- Success Toast -->
+    </nav>
+
     <div id="success-alert" class="alert alert-success d-flex justify-content-between d-none sticky-alert" role="alert">
-        <p class="my-0 me-4">New product added!</p>
+        <p class="my-0 me-4">Product Updated!</p>
         <button type="button" class="btn-close" aria-label="Close"></button>
     </div>
 
-    <!-- Main div -->
     <div class="container d-flex justify-content-center align-items-center vh-100 ">
         <div class="shadow-sm border rounded-2 w-75  p-5">
             <div action="" class="d-flex flex-column gap-4 align-items-center ">
                 <div>
-                    <h3 class="text-center">Add Product</h3>
+                    <h3 class="text-center">Update Product</h3>
                 </div>
                 <div class="form-floating  w-100">
                     <input type="text" class="form-control" id="P_name" placeholder="Computer" required>
@@ -52,24 +51,26 @@
                 <div class="form-floating w-100">
                     <input type="Number" class="form-control" id="P_price" placeholder="₹1000" required>
                     <label for="floatingPassword">Price</label>
-                  </div>
+                </div>
                 <div class="form-floating w-100">
                     <textarea class="form-control" placeholder="Add Product description here" id="P_desc"
                         style="height: 100px;" required></textarea>
                     <label for="floatingTextarea2">Description</label>
                 </div>
-                <div class="form-floating w-100">
-                  <input type="text" class="form-control" id="P_img" placeholder="Image" required>
-                  <label for="floatingPassword">Image</label>
-                </div>
-
-                <button type="button" class="btn btn-outline-primary w-auto" onclick="addProduct()">Add</button>
+                <div class="input-group ">
+                    <span class="input-group-text p-0  d-flex" id="basic-addon1">
+                        <img src="" id="prev_img" alt="Image" height="50px" width="50px">
+                    </span>
+                    <div class="form-floating h-100">
+                        <input type="text" class="form-control h-100" id="P_img"  oninput="updateimg()" placeholder="Image" required>
+                        <label for="floatingPassword">Image</label>
+                    </div>
+                  </div>
+                <button type="button" class="btn btn-outline-primary w-auto " onclick="updateProd()">Update</button>
             </div>
         </div>
 
     </div>
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
