Change little design

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         <div class="sort d-flex gap-2 align-items-center">
             <p class="m-0 text-secondary fs-6">Sort By : </p>
             <input type="radio" class="btn-check" name="options" id="name" autocomplete="off" checked>
-            <label class="btn btn-primary" for="name">Name</label>
+            <label class="btn btn-outline-dark " style="font-size:small;" for="name">Name</label>
             
             <input type="radio" class="btn-check" name="options" id="prod_id" autocomplete="off">
-            <label class="btn btn-primary" for="prod_id">Product Id</label>
+            <label class="btn btn-outline-dark " style="font-size:small;" for="prod_id">Product Id</label>
 
             <input type="radio" class="btn-check" name="options" id="price" autocomplete="off">
-            <label class="btn btn-primary" for="price">Price</label>
+            <label class="btn btn-outline-dark " style="font-size:small;" for="price">Price</label>
         </div>
     </div>
     
