Add title in viewproduct

--- a/viewproduct.html
+++ b/viewproduct.html
@@ -32,7 +32,8 @@
         </div>
     </nav>
 
-    <div id="cont" class="container-sm  d-flex justify-content-center align-items center justify-content-center align-items-center mt-5">
+    <div id="cont" class="container-sm  d-flex flex-column justify-content-center align-items center justify-content-center align-items-center mt-5">
+        <h2 class="mb-5">Prouct description</h2>
         
     </div>
 
