edit addprod page and viewprod page

--- a/addProduct.html
+++ b/addProduct.html
@@ -61,6 +61,7 @@
                 <div class="form-floating w-100">
                   <input type="text" class="form-control" id="P_img" placeholder="Image" required>
                   <label for="floatingPassword">Image</label>
+                  <div class="form-text" id="basic-addon4">Please add a valid URL for image</div>
                 </div>
 
                 <button type="button" class="btn btn-outline-primary w-auto" onclick="addProduct()">Add</button>
