--- a/updateproduct.html
+++ b/updateproduct.html
@@ -5,17 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Update product</title>
+    <!-- Bootstrap CSS for styling -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Optional Bootstrap docs CSS -->
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <!-- Link to custom JS for functionality -->
     <script src="update.js"></script>
+    <!-- Link to custom CSS for additional styling -->
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
+    <!-- Navbar for navigation, includes links to the homepage and product adding page -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
+            <!-- Product Manager logo linking to the homepage -->
             <a class="navbar-brand" href="index.html">Product Manager</a>
+            <!-- Navbar toggle for mobile view -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -23,9 +30,11 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
+                        <!-- Home link -->
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
+                        <!-- Add Product link -->
                         <a class="nav-link" href="addProduct.html">Add</a>
                     </li>
                 </ul>
@@ -33,45 +42,57 @@
         </div>
     </nav>
 
+    <!-- Success alert that will show when the product is updated -->
     <div id="success-alert" class="alert alert-success d-flex justify-content-between d-none sticky-alert" role="alert">
         <p class="my-0 me-4">Product Updated!</p>
+        <!-- Close button for the success alert -->
         <button type="button" class="btn-close" aria-label="Close"></button>
     </div>
 
-    <div class="container d-flex justify-content-center align-items-center vh-100 ">
-        <div class="shadow-sm border rounded-2 w-75  p-5">
-            <div action="" class="d-flex flex-column gap-4 align-items-center ">
+    <!-- Main container for centering the content on the page -->
+    <div class="container d-flex justify-content-center align-items-center vh-100">
+        <div class="shadow-sm border rounded-2 w-75 p-5">
+            <!-- Form container for updating product details -->
+            <div action="" class="d-flex flex-column gap-4 align-items-center">
+                <!-- Heading for the page -->
                 <div>
                     <h3 class="text-center">Update Product</h3>
                 </div>
-                <div class="form-floating  w-100">
+                <!-- Product Name input field -->
+                <div class="form-floating w-100">
                     <input type="text" class="form-control" id="P_name" placeholder="Computer" required>
                     <label for="floatingInput">Product Name</label>
                 </div>
+                <!-- Product Price input field -->
                 <div class="form-floating w-100">
                     <input type="Number" class="form-control" id="P_price" placeholder="₹1000" required>
                     <label for="floatingPassword">Price</label>
                 </div>
+                <!-- Product Description textarea field -->
                 <div class="form-floating w-100">
                     <textarea class="form-control" placeholder="Add Product description here" id="P_desc"
                         style="height: 100px;" required></textarea>
                     <label for="floatingTextarea2">Description</label>
                 </div>
-                <div class="input-group ">
-                    <span class="input-group-text p-0  d-flex" id="basic-addon1">
+                <!-- Image preview and input field -->
+                <div class="input-group">
+                    <span class="input-group-text p-0 d-flex" id="basic-addon1">
+                        <!-- Placeholder for the product image preview -->
                         <img src="" id="prev_img" alt="Image" height="50px" width="50px">
                     </span>
                     <div class="form-floating h-100">
-                        <input type="text" class="form-control h-100" id="P_img"  oninput="updateimg()" placeholder="Image" required>
+                        <!-- Input for image URL, triggering updateimg function to show image preview -->
+                        <input type="text" class="form-control h-100" id="P_img" oninput="updateimg()" placeholder="Image" required>
                         <label for="floatingPassword">Image</label>
                     </div>
-                  </div>
-                <button type="button" class="btn btn-outline-primary w-auto " onclick="updateProd()">Update</button>
+                </div>
+                <!-- Update button, triggers the updateProd function -->
+                <button type="button" class="btn btn-outline-primary w-auto" onclick="updateProd()">Update</button>
             </div>
         </div>
-
     </div>
 
+    <!-- Bootstrap JS for interactive components like modals and dropdowns -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
