--- a/viewproduct.html
+++ b/viewproduct.html
@@ -5,25 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>View Product</title>
+    <!-- Bootstrap CSS for styling -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Optional Bootstrap docs CSS -->
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <!-- Link to custom CSS for additional styling specific to this page -->
     <link rel="stylesheet" href="viewstyles.css">
+    <!-- Link to custom JS for functionality specific to viewing product details -->
     <script src="view.js"></script>
 </head>
 
 <body>
+
+    <!-- Navbar for easy navigation to the homepage and product adding page -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
+            <!-- Link to homepage with 'Product Manager' branding -->
             <a class="navbar-brand" href="index.html">Product Manager</a>
+            <!-- Navbar toggle for mobile responsiveness -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
+                    <!-- Home link -->
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
+                    <!-- Add Product link -->
                     <li class="nav-item">
                         <a class="nav-link" href="addProduct.html">Add</a>
                     </li>
@@ -32,11 +42,15 @@
         </div>
     </nav>
 
-    <div id="cont" class="container-sm  d-flex flex-column justify-content-center align-items center justify-content-center align-items-center mt-5">
-        <h2 class="mb-5">Prouct description</h2>
+    <!-- Container for displaying the product description. This section will hold dynamic content. -->
+    <div id="cont" class="container-sm d-flex flex-column justify-content-center align-items-center mt-5">
+        <!-- Heading for the page, displaying 'Product Description' -->
+        <h2 class="mb-5">Product Description</h2>
         
+        <!-- You will probably populate this section dynamically via JavaScript -->
     </div>
 
+    <!-- Bootstrap JS for enabling interactivity and responsive features like the collapsing navbar -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
