--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <!-- title -->
-    <div class="container">
+    <div class="container pb-4">
         <h2 class="my-4">Available Product</h2>
         <div id="list" class="d-flex flex-wrap gap-5" id="product-container">
             <!-- Container for list product -->
