--- a/addProduct.html
+++ b/addProduct.html
@@ -14,7 +14,7 @@
 <body>
   <!--Nav bar-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
+    <div class="container-fluid ">
       <a class="navbar-brand" href="index.html">Product Manager</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,9 +40,10 @@
   </div>
 
   <!-- Main div -->
-  <div class="container d-flex justify-content-center align-items-center vh-100 ">
+  <div class="container d-flex justify-content-center align-items-center vh-100 my-3">
     <div class="shadow-sm border rounded-2 w-75  p-5">
-      <div action="" class="d-flex flex-column gap-4 align-items-center ">
+
+      <form onsubmit="addProduct(event)" class="d-flex flex-column gap-4 align-items-center ">
         <div>
           <h3 class="text-center">Add Product</h3>
         </div>
@@ -65,8 +66,8 @@
           <div class="form-text" id="basic-addon4">Please add a valid URL for image</div>
         </div>
 
-        <button type="button" class="btn btn-outline-primary w-auto" onclick="addProduct()">Add</button>
-      </div>
+        <input type="submit" class="btn btn-outline-primary w-auto" value="Add"/>
+      </form>
     </div>
 
   </div>
